TRAV-153-bug(user onboarding): travel document page element and passport form alignment (#968)
- Fix the alignment of the Travel Document on the user onboarding page by centering it.
- Fix functionality that was broken when uploading a passport document should be fixed.
- Fix the error message that is toasted back to the user on passport upload  and not display 400 Bad requests.

[Delivers TRAV-153]

--- a/src/components/Forms/TravelReadinessForm/TravelDocument.scss
+++ b/src/components/Forms/TravelReadinessForm/TravelDocument.scss
@@ -20,7 +20,7 @@
   }
 
   .form-input.fluid {
-    width: 100%;
+    width: 98%;
 
     &:first-child {
       margin-top: 2em;
@@ -74,6 +74,7 @@
     border: none;
     outline: none;
     margin-bottom: 20px;
+    width: 100%;
   }
   .character__conditions__visa {
     position: absolute;
@@ -100,6 +101,10 @@
 .attach-document-text {
   color: #4F4F4F;
 }
+}
+
+div.input-group.resposive_passport{
+  justify-content: space-around!important;
 }
 
 @media only screen and (max-width: 600px) {
