--- a/src/components/RequestTab/RequestTabHead.scss
+++ b/src/components/RequestTab/RequestTabHead.scss
@@ -80,7 +80,6 @@
 
 .incomplete {
   box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.1);
-  opacity: 0.5;
   .foot-text {
     display: none;
   }
